[gd_scene load_steps=6 format=3 uid="uid://doospxbh0so4i"]

[ext_resource type="Script" path="res://scenes/tools/templates_script.gd" id="1_q14ue"]
[ext_resource type="Texture2D" uid="uid://cs1peems7gyk2" path="res://icons/new_template_icon.svg" id="1_sivrn"]
[ext_resource type="Texture2D" uid="uid://d83q0hy74uit" path="res://icons/search_icon.svg" id="3_xrx8o"]
[ext_resource type="Texture2D" uid="uid://c03por8vrxsy7" path="res://icons/image_icon.svg" id="4_rcfse"]
[ext_resource type="Texture2D" uid="uid://doflm0070386w" path="res://icons/image_icon_crossed.svg" id="5_i4e8j"]

[node name="Templates" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q14ue")

[node name="TemplatesContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderContainer" type="HBoxContainer" parent="TemplatesContainer"]
layout_mode = 2

[node name="SearchTemplateLnEdt" type="LineEdit" parent="TemplatesContainer/HeaderContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search Template"

[node name="NewTemplateBtn" type="Button" parent="TemplatesContainer/HeaderContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "New Template"
icon = ExtResource("1_sivrn")
flat = true
icon_alignment = 1

[node name="TemplateTree" type="Tree" parent="TemplatesContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true

[node name="SetupContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="InfoContaienr" type="VBoxContainer" parent="SetupContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SetupContainer/InfoContaienr"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Info"
vertical_alignment = 2

[node name="TitleContainer" type="VBoxContainer" parent="SetupContainer/InfoContaienr"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="TemplateTitle" type="LineEdit" parent="SetupContainer/InfoContaienr/TitleContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Template Title"
editable = false

[node name="DescriptionTxtEdt" type="TextEdit" parent="SetupContainer/InfoContaienr/TitleContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Template Description"
editable = false

[node name="ImageContainer" type="VBoxContainer" parent="SetupContainer/InfoContaienr"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="PanelContainer" type="PanelContainer" parent="SetupContainer/InfoContaienr/ImageContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ThumbnailContainer" type="TextureRect" parent="SetupContainer/InfoContaienr/ImageContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="ButtonContainer" type="HBoxContainer" parent="SetupContainer/InfoContaienr/ImageContainer"]
layout_mode = 2
alignment = 2

[node name="SelectThumbButton" type="Button" parent="SetupContainer/InfoContaienr/ImageContainer/ButtonContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
disabled = true
icon = ExtResource("4_rcfse")
flat = true

[node name="ClearThumbnail" type="Button" parent="SetupContainer/InfoContaienr/ImageContainer/ButtonContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
disabled = true
icon = ExtResource("5_i4e8j")
flat = true

[node name="TagsContainer" type="VBoxContainer" parent="SetupContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SetupContainer/TagsContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Tags"
vertical_alignment = 2

[node name="TagsTree" type="Tree" parent="SetupContainer/TagsContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true
select_mode = 2

[node name="AddTagLnEdt" type="LineEdit" parent="SetupContainer/TagsContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Add Tag"
editable = false

[node name="GroupsContainer" type="VBoxContainer" parent="SetupContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="SetupContainer/GroupsContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Groups"
vertical_alignment = 2

[node name="SearchGroupLnEdt" type="LineEdit" parent="SetupContainer/GroupsContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Search Group"
clear_button_enabled = true
right_icon = ExtResource("3_xrx8o")

[node name="GroupTree" type="Tree" parent="SetupContainer/GroupsContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true
